name:                ln-interop
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ln-interop#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lib2
  build-depends:       base
                     , haskell-interop-prime
                     , ln-types
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ln-interop
